--- a/firewall.jinja
+++ b/firewall.jinja
@@ -6,5 +6,5 @@ resources:
     sourceRanges: [0.0.0.0/0]
     allowed:
     - IPProtocol: tcp
-      ports: ['25565']
+      ports: ['25565','25575']
 
