--- a/firewall.jinja
+++ b/firewall.jinja
@@ -1,10 +1,10 @@
 resources:
-- type: gcp-types/compute-v1:firewalls
+- type: compute.v1.firewall
   name: allow-{{ env["deployment"] }}
   properties:
     network: https://www.googleapis.com/compute/v1/projects/{{ env["project"] }}/global/networks/default
     sourceRanges: [0.0.0.0/0]
     allowed:
-    - IPProtocol: tcp
+    - IPProtocol: TCP
       ports: ['25565','25575']
 
